# blue-tap

./: .gitignore  BLE012_Scan.py  BLE013_Spoof.py  BLE014_ble_scanner.py  BLE015_ble_service.py  BLE016_ble_read.py  BLE017_Blt_service_scanner.py  BLE018_reset_spoof.py  CLAUDE.md  README.md  fuzzer-implementation-plan.md  lessons-from-bluetooth-specifications.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
blue_tap/: __init__.py  cli.py
blue_tap/attack/: __init__.py  a2dp.py  auto.py  avrcp.py  bias.py  bluesnarfer.py  bluffs.py  ctkd.py  cve_checks_airoha.py  cve_checks_avrcp.py  cve_checks_ble_smp.py  cve_checks_bnep.py  cve_checks_gatt.py  cve_checks_hid.py  cve_checks_l2cap.py  cve_checks_pairing.py  cve_checks_raw_acl.py  cve_checks_sdp.py  cve_framework.py  dos_checks_ble.py  dos_checks_classic.py  dos_checks_raw_acl.py  dos_framework.py  dos_registry.py  dos_runner.py  encryption_downgrade.py  fleet.py  fuzz.py  hfp.py  hijack.py  key_harvest.py  knob.py  map_client.py  non_cve_checks_ble.py  non_cve_checks_posture.py  non_cve_checks_rfcomm.py  opp.py  pbap.py  protocol_dos.py  ssp_downgrade.py  (+1 more)
blue_tap/core/: __init__.py  adapter.py  attack_framework.py  audio_framework.py  auto_framework.py  cli_events.py  data_framework.py  firmware.py  firmware_framework.py  fuzz_framework.py  hci_vsc.py  recon_framework.py  report_contract.py  result_schema.py  scan_framework.py  scanner.py  spoof_framework.py  spoofer.py
blue_tap/demo/: __init__.py  mock_data.py  report_data.py  runner.py
blue_tap/firmware/: __init__.py
blue_tap/framework/: __init__.py  config.py
blue_tap/fuzz/: __init__.py  cli_commands.py  cli_extra.py  corpus.py  crash_db.py  engine.py  field_weight_tracker.py  health_monitor.py  legacy.py  minimizer.py  pcap_replay.py  response_analyzer.py  state_inference.py  transport.py
blue_tap/hardware/: __init__.py  adapter.py  firmware.py  hci_vsc.py  obex_client.py  scanner.py  spoofer.py
blue_tap/interfaces/: __init__.py
blue_tap/modules/: __init__.py
blue_tap/playbooks/: __init__.py  ble-assessment.yaml  dos-campaign.yaml  full-assessment.yaml  ivi-attack.yaml  lmp-fuzzing.yaml  passive-recon.yaml  post-exploit-data.yaml  quick-recon.yaml
blue_tap/recon/: __init__.py  campaign.py  capability_detector.py  capture_analysis.py  correlation.py  fingerprint.py  gatt.py  hci_capture.py  l2cap_scan.py  prerequisites.py  rfcomm_scan.py  sdp.py  sniffer.py  spec_interpretation.py
blue_tap/report/: __init__.py  generator.py
blue_tap/ui/: dashboard.py
blue_tap/utils/: bt_helpers.py  env_doctor.py  interactive.py  output.py  session.py
bt_tap/: __init__.py  cli.py
bt_tap/attack/: a2dp.py  auto.py  avrcp.py  bias.py  bluesnarfer.py  dos.py  fuzz.py  hfp.py  hijack.py  map_client.py  opp.py  pbap.py  pin_brute.py  tpms.py  vuln_scanner.py
bt_tap/core/: adapter.py  scanner.py  spoofer.py
bt_tap/fuzz/: __init__.py  cli_commands.py  cli_extra.py  corpus.py  crash_db.py  engine.py  legacy.py  minimizer.py  pcap_replay.py  transport.py
bt_tap/recon/: fingerprint.py  gatt.py  hci_capture.py  l2cap_scan.py  rfcomm_scan.py  sdp.py  sniffer.py  ubertooth.py
bt_tap/report/: generator.py
bt_tap/utils/: bt_helpers.py  interactive.py  output.py  session.py
docs/: CHANGELOG.md  changelog.md  dos-cve-matrix.md  dos-guide.md  features.md  index.md  ivi-simulator.md  references.md  troubleshooting.md  usage-guide.md  vulnscan-cve-matrix.md
docs/cve-detection-specs/: CVE-2017-0781-0782-0783-blueborne-bnep.md  CVE-2017-13258-family-bnep-info-leak.md  CVE-2018-9359-android-l2cap-oob-read.md  CVE-2019-19195-sweyntooth-invalid-l2cap-fragment.md  CVE-2019-19196-sweyntooth-public-key-crash.md  CVE-2019-2225-android-justworks-silent-pair.md  CVE-2020-0556-hid-hogp-unauthenticated.md  CVE-2020-10061-sweyntooth-zephyr-invalid-sequence.md  CVE-2020-10069-sweyntooth-zephyr-invalid-channel-map.md  CVE-2020-12352-badchoice-a2mp-infoleak.md  CVE-2020-13593-sweyntooth-nxp-dhcheck-skip.md  CVE-2020-9770-blesa.md  (+28 more)
examples/plugin-template/: README.md  pyproject.toml
examples/plugin-template/bluetap_example_plugin/: __init__.py
tests/: conftest.py  test_adapter_validation.py  test_at_parsers.py  test_atomic_sigkill.py  test_attack_data.py  test_attack_dos.py  test_attack_exploit.py  test_attack_standardization.py  test_attack_vuln.py  test_auto_envelope.py  test_bt_helpers.py  test_cli_events.py  test_cli_events_coverage.py  test_cli_facades.py  test_cli_report.py  test_cli_startup_bootstrap.py  test_cli_workflow.py  test_config_loader.py  test_config_sections.py  test_core.py  test_dark_firmware_watchdog.py  test_dependency_graph.py  test_dependency_graph_invalidation.py  test_discovery_regressions.py  test_doctor_fix_hints.py  test_dos_adapter_migration.py  test_dos_migration.py  test_dry_run_rollout.py  test_firmware_envelope.py  test_fuzz_adapter.py  test_fuzz_adapter_migration.py  test_fuzz_cli_batch.py  test_fuzz_cli_extra.py  test_fuzz_cli_v2_6_4.py  test_fuzz_core.py  test_fuzz_corpus_io.py  test_fuzz_deferred.py  test_fuzz_envelope.py  test_fuzz_field_weights.py  test_fuzz_health_monitor.py  (+46 more)
tests/fixtures/example_plugin/: README.md  pyproject.toml
tests/fixtures/example_plugin/bt_example_plugin/: __init__.py  module.py
(+293 files in other folders)
