[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bt-tap"
version = "0.1.0"
description = "Bluetooth/BLE Penetration Testing Toolkit for Automotive IVI Systems"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "bleak>=0.21",
    "PyOBEX>=0.4",
    "dbus-python>=1.3",
    "PyGObject>=3.42",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
audio = ["pulsectl>=23.5"]

[project.scripts]
bt-tap = "bt_tap.cli:main"

[tool.setuptools.packages.find]
include = ["bt_tap*"]
