[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blue-tap"
version = "2.0.1"
description = "Bluetooth/BLE Penetration Testing Toolkit for Automotive IVI Systems"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Santhosh Ballikonda"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "bleak>=0.21",
    "dbus-python>=1.3",
    "PyGObject>=3.42",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
audio = ["pulsectl>=23.5"]
fuzz = ["scapy>=2.5"]

[project.scripts]
blue-tap = "blue_tap.cli:cli"

[tool.setuptools.packages.find]
include = ["blue_tap*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enforce high-signal runtime correctness checks now; stylistic cleanup can
# be tightened progressively without blocking releases.
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
