[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blue-tap"
version = "2.6.3"
description = "Bluetooth/BLE Penetration Testing Toolkit for Automotive IVI Systems"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{name = "Santhosh Ballikonda"}]
keywords = ["bluetooth", "ble", "pentest", "security", "automotive", "ivi", "fuzzing"]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "rich-click>=1.8",
    "bleak>=0.21",
    "dbus-fast>=2.0",
    "scapy>=2.5",
    "pulsectl>=23.5",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/Indspl0it/blue-tap"
Repository = "https://github.com/Indspl0it/blue-tap"
Issues = "https://github.com/Indspl0it/blue-tap/issues"
Changelog = "https://github.com/Indspl0it/blue-tap/blob/main/docs/changelog.md"
Documentation = "https://Indspl0it.github.io/blue-tap/"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
blue-tap = "blue_tap.interfaces.cli.main:main"

[project.entry-points."blue_tap.modules"]
# Third-party modules register here:
# my-module = "my_package.modules.my_module:MyModuleDescriptor"

[tool.setuptools.packages.find]
include = ["blue_tap*"]

[tool.setuptools.package-data]
"blue_tap.firmware" = ["*.bin"]
"blue_tap.playbooks" = ["*.yaml"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
testpaths = ["tests"]
